# game_physics_in_a_weekend

./: .gitignore  CMakeLists.txt  conanfile.txt
resources/shaders/: render.frag  render.vert
resources/spv/: basis.vert.spv  frustum.frag.spv  frustum.vert.spv  render.frag.spv  render.vert.spv  shadowmap.vert.spv
src/: Basis.hpp  GameWorld.cpp  GameWorld.hpp  diamond.hpp  main.cpp  models.hpp  objectbuilder.cpp  objectbuilder.hpp  objects.hpp  ragdoll.hpp  sandbox.hpp  shadowmap.hpp  tags.hpp  utility.hpp
src/formats/: formats.hpp  uuid_format.hpp
src/math/: geometry.hpp  lcp.hpp  mat.hpp  math.hpp  matrixops.hpp  quatOps.hpp  vecN.hpp  vectorops.hpp
src/physics/: Constraint.hpp  body.cpp  body.hpp  bounds.cpp  bounds.hpp  collision.hpp  constraint.cpp  contact.hpp  convexhullbuilder.cpp  convexhullbuilder.hpp  convexhullshape.cpp  convexhullshape.hpp  gjk.cpp  gjk.hpp  intersectiontest.hpp  manifold.cpp  manifold.hpp  shape.cpp  shape.hpp  signedVolume.hpp  signedvolume.cpp
src/physics/constraints/: constraintPenetration.cpp  constraintPenetration.hpp  constraintbase.cpp  constraintbase.hpp  constraintconstantvelocity.cpp  constraintconstantvelocity.hpp  constraintconstantvelocitylimited.cpp  constraintconstantvelocitylimited.hpp  constraintdistance.cpp  constraintdistance.hpp  constrainthingequatlimited.cpp  constrainthingequatlimited.hpp  constraintmotor.cpp  constraintmotor.hpp  constraintmover.cpp  constraintmover.hpp  constraintorientation.cpp  constraintorientation.hpp  constraints.hpp
tests/: gjkfixture.cpp  lcpFixture.cpp  matfixture.cpp  signedvolumefixture.cpp  vecnfixture.cpp
